Refractor Ecological Project -> ProjectRegistration
