# src/validators/validateProjectRegistrationApplication.ts
@@ -1,7 +1,7 @@
 import Joi from 'joi'
 import { components } from 'src/spec/openapi'
 
-type EcologicalProject = components['schemas']['EcologicalProject']
+type ProjectRegistration = components['schemas']['ProjectRegistration']
 
 const schema = Joi.object({
 	field0: Joi.string().required(),
@@ -15,7 +15,7 @@ const schema = Joi.object({
 	field8: Joi.string().required(),
 })
 
-export default (candidate: EcologicalProject): Array<string> | void => {
+export default (candidate: ProjectRegistration): Array<string> | void => {
 	const validation = schema.validate(candidate || {}, { abortEarly: false })
 
 	if (validation.error) {
